test/bad/classes/inheritance03.px

class Base def
    Int x: 3

class Sub(Base) def
    Int y: 3

sub = Sub()
sub = Base()
